# searchess-ai-service

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: pylint.yml  test.yml
docs/: ADR.md  api-contracts.md  architecture-note.md  architecture.md  dto.md  full-game-dataset.md  observability.md  openspiel-mapping.md  playing-strength-evaluation.md  puzzle_dataset.md  scope.md  test-hook.md  training-pipeline.md
scripts/: sanity_check_puzzle_inference.py
src/searchess_ai/: main.py
src/searchess_ai/api/: app.py  dependencies.py  errors.py
src/searchess_ai/application/: README.md
src/searchess_ai/artifacts/: schema.py
src/searchess_ai/data_pipeline/: config.py  extractor.py  filter.py  full_game_pipeline.py  ingestion.py  pipeline.py  puzzle_ingestion.py  puzzle_pipeline.py  writer.py
src/searchess_ai/domain/: Comon-Domain-Language.md  README.md  evaluation.py  game.py  inference.py  model.py  training.py
src/searchess_ai/evaluation/: game_play.py  report.py
src/searchess_ai/model_runtime/: decision.py  encoder.py  loader.py  (+3 more)
tests/: conftest.py
tests/api/: test_evaluation.py  test_health.py  test_inference.py  test_inference_backend_selection.py  test_inference_test_hook.py  test_inference_timeout.py  test_models.py  test_move_mapper.py  test_training.py
tests/application/: test_choose_move.py  test_get_evaluation_job_status.py  test_get_model_detail.py  test_get_training_job_status.py  test_list_models.py  test_submit_evaluation_job.py  test_submit_training_job.py
tests/data_pipeline/: test_full_game_pipeline.py
tests/domain/: test_evaluation.py  test_game.py  test_inference.py  test_training.py
tests/evaluation/: test_game_play.py
tests/infrastructure/: test_decision_counters.py  test_openspiel_chess.py  test_openspiel_decision.py  test_openspiel_inference_engine.py  test_openspiel_mapping.py  test_random_inference_engine.py
tests/model_runtime/: test_artifact_integration.py  test_encoder_stability.py  test_loader_validation.py  test_move_encoder.py  test_serving_state.py
(+41 files in other folders)
