[project]
name = "searchess-ai-service"
version = "0.1.0"
description = "AI service for Searchess."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
"fastapi",
"uvicorn",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/searchess_ai"]